fix: Let dropdown overflow the content in fip validity

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -334,7 +334,6 @@ figure {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    overflow-x: auto;
 
     p {
       text-align: justify;
